# lightchess

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  chess_main.cpp  chess_main.h  frame_main.cpp  frame_main.h
